app/assets/stylesheets/areas/_pages.scss
h2.tinylabel {
  color: $gray-dark;
  @include font-size(13px);
  font-weight: 400;
  margin-top: 3.5em;
  position: relative;
  text-transform: uppercase;

  b {
    font-weight: 600;
    position: absolute;
    left: -2em;
  }
}

.home-block {
  margin: 0 auto;
  padding: 1em 1em;

  @include media('>tablet') {
    padding: 1em 5em;
  }
}

#social_proof {
  text-align: center;
  padding: 3em 0;

  @include media('>tablet') {
    padding: 3em 2em;
  }

  h2.tinylabel {
    letter-spacing: 0.2em;
  }

  ul#brand_list {
    @extend %list-in-disguise;
    width: 100%;

    @include media('>tablet') {
      display: flex;
      flex-direction: row;
      justify-content: space-between;
    }

    li {
      // Create 1x, 2x PNGs, and SVG of each asset, the bacgkround-image mixin
      // will use the best one for the display device. Adjust background y
      // position to align the images vertically.

      @extend %image-replacement;
      background-repeat: no-repeat;
      background-position: center center;
      height: 41px; // Change to the height of the tallest logo.
      margin: 0 2em;

      @include media('>tablet') {
        background-size: contain;
      }

      &#powerfleet {
        @include background-image("brands/brand_powerfleet");
        @include media('>tablet') {
          background-position-y: 5px;
          // height: 35px;
          width: 189px;
        }
      }

      &#cargosense {
        @include background-image("brands/brand_cargosense");
        @include media('>tablet') {
          background-position-y: 15px;
          // height: 16px;
          width: 255px;
        }
      }

      &#livingsocial {
        @include background-image("brands/brand_livingsocial");
        @include media('>tablet') {
          background-position-y: 0;
          // height: 41px;
          width: 108px;
        }
      }

      &#guggenheim {
        @include background-image("brands/brand_guggenheim");
        @include media('>tablet') {
          background-position-y: 15px;
          // height: 17px;
          width: 233px;
        }
      }

      &#procore {
        @include background-image("brands/brand_procore");
        @include media('>tablet') {
          background-position-y: 11px;
          // height: 23px;
          width: 188px;
        }
      }
    }
  }
} // #social_proof

#project_reel {

} // #project_reel

#featured_work {

} // #featured_work

#developerux {

} // #developerux

#mailing_contact {

} // #mailing_contact

body.contact {


}

// ----------------------------------------------------------------------------
// SPEAKING PAGE

section#appearances {
  display: flex;
  flex-direction: column;

  @include media('>tablet') {
    flex-direction: row;
    flex-wrap: wrap;
  }

  h2 {
    flex-basis: 100%;
  }

  section {
    flex-basis: 100%;

    @include media('>tablet') {
      flex-basis: 50%;
    }
  }


  ol.appearances {
    @extend %list-in-disguise;

    li {
      margin-bottom: 0.5em;

      h3 {
        margin-bottom: 0.25em;

        span {
          display: block;
          @include font-size(13px);
          font-weight: 400;
          font-style: italic;
        }
      }

      p {
        margin: 0.25em 0;
      }

      time {
        @include font-size(15px);
        color: $gray-dark;
      }
    }
  }

}

section#talks {
  margin-bottom: 3em;



  h2 {
    flex-basis: 100%;
  }

  ul#talk_list {
    @extend %list-in-disguise;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;

    li {
      @extend .card.frosted;
      margin-bottom: 2em;
      flex-basis: 90%;
      text-align: center;
      @include font-size(15px);

      @include media('>tablet') {
        flex-basis: 29%;
      }

      div.cover-image {
        background-color: $gray-light;
        @include background-image("talks/blank");
        background-size: cover;
        background-position: center center;
        height: 150px;
        width: 100%;
        margin-bottom: 1em;
      }

      &#ux {
        div.cover-image {
          @include background-image("talks/talk_ux");
        }
      }

      h3 {
        margin-bottom: 0.25em;

        span {
          display: block;
          @include font-size(13px);
          font-weight: 400;
          font-style: italic;
        }
      }

      p {
        margin: 0.25em 0;
      }
    }
  }
}

// ----------------------------------------------------------------------------
// WORK PAGE

body.work {

  // ----------------------------------------------------------------------------
  // HEADER CHANGES

  header#masthead {
    hgroup { display: none; }
  }

  ul {
    li {
      margin-bottom: 1em;
    }
  }

  .work-header {
    background-color: $gray-darker;
    background-repeat: no-repeat;
    background-size: cover;
    box-shadow: inset 0 0 10px 1px rgba(0,0,0,0.5);
    padding: 6em 1em 1em 1em;
    width: 100%;

    @include media('>desktop') {
      padding: 10em 5em 1em 5em;
    }

    h1 {
      color: $white;

      i {
        font-weight: 200;
        font-style: italic;
        font-size: 0.75em;
      }
    }

    &#ls_head {
      background-image: asset-url("work/livingsocial_csr/ls-header-background-dark.jpg");
      background-position: center center;
    }

    &#navanti_head {
      background-image: asset-url("work/navanti_pulse/page-cover.jpg");
      background-position: center center;
    }

    &#procore_head {
      background-image: asset-url("work/procore/page-cover.jpg");
      background-position: center center;}

    &#powerfleet_head {
      background-image: asset-url("work/powerfleet_chassis/page-cover.jpg");
      background-position: center center;
    }
  }
  // ----------------------------------------------------------------------------

  blockquote {
    border-left: 5px solid $base;
    font-style: italic;
    padding-left: 1em;
    position: relative;

    &::before {
      content: "“";
      color: $gray-lighter;
      font-family: Georgia, 'Times New Roman', Times, serif;
      @include font-size(144px);
      position: absolute;
      left: -0.25em;
      top: 0.25em;
      z-index: -1;
    }

    .headshot-quote {
      border-radius: 50%;
      border: 1px solid $gray-light;
      position: absolute;
      left: -150px;
      margin: 0 1em 1em 0;
      width: 120px;
    }
  }
  figure {
    max-width: 100%;
    padding: 0;
    margin: 2em 0;
    width: 100%;

    @include media('>desktop') {
      margin: 3em -5em;
      max-width: calc(100% + 10em);
      width: calc(100% + 10em);
    }

    img {
      width: 100%;
    }

    figcaption p {
      font-style: italic;
      text-align: center;
    }
  }

  h1 {
    line-height: 0.7em;

    span {
      color: $gray-dark;
      display: block;
      @include font-size(16px);
      font-weight: 400;
      text-transform: uppercase;
      margin-bottom: 0.5em;
    }
  }

  .team ul {
    @extend %list-in-disguise;
  }

  p.callout {
    @include font-size(18px);
    line-height: 1.4em;
  }

  section.tools-used {
    margin-bottom: 4em;
  }

  ul.tags {
    @extend %list-in-disguise;

    li {
      color: $gray-darker;
      display: inline-block;
      background-color: $gray-lighter;
      border-radius: $base-border-radius;
      margin-right: 0.5em;
      margin-bottom: 0.5em;
      padding: 0.25em 0.5em;
    }
  }

  ol#cs_list {
    @extend %list-in-disguise;
    margin-bottom: 3em;

    li {
      @extend .card.frosted;
      background-position: center center;
      background-repeat: no-repeat;
      background-size: cover;
      display: block;
      margin-bottom: 1em;
      padding-top: 56.25%; /* 16:9 or widescreen aspect ratio */
      position: relative;

      @include media('>tablet') {
        margin-bottom: 2em;
      }

      > a.whole-linker {
        // Links the entire "card" to the page for easier tap navigation
        display: block;
        height: 100%;
        position: absolute;
        top: 0;
        left: -5px;
        width: 100%;
        z-index: 1000;
      }

      h3, p {
        color: white;
        position: absolute;
        text-align: center;
        width: 100%;
      }

      // Setting background images and text layout for each card
      &#livingsocial_csr {
        background-image: asset-url("work/livingsocial_csr/ls-cover.jpg");

        h3 {
          top: 100px;
          @include font-size(16px);

          @include media('>tablet') {
            @include font-size(24px);
            top: 60%;
          }
        }

        p {
          top: 155px;
          line-height: 1.2em;
          @include font-size(12px);
          width: 80%;
          margin-left: 10%;

          @include media('>tablet') {
            @include font-size(18px);
            top: 70%;
          }
        }
      }

      &#navanti_pulse {
        background-image: asset-url("work/navanti_pulse/navanti-cover.jpg");

        h3 {
          visibility: hidden;
        }

        p {
          top: 155px;
          line-height: 1.2em;
          @include font-size(12px);
          width: 80%;
          margin-left: 10%;

          @include media('>tablet') {
            @include font-size(18px);
            top: 70%;
          }
        }
      }

      &#procore {
        background-image: asset-url("work/procore/procore-cover.jpg");

        h3 {
          visibility: hidden;
        }

        p {
          color: $gray-darkest;
          top: 155px;
          line-height: 1.2em;
          @include font-size(12px);
          width: 80%;
          margin-left: 10%;

          @include media('>tablet') {
            @include font-size(18px);
            top: 70%;
          }
        }
      }

      &#powerfleet_chassis {
        background-image: asset-url("work/powerfleet_chassis/pf_chassis_cover.jpg");

        h3 {
          visibility: hidden;
        }

        p {
          color: $white;
          top: 155px;
          line-height: 1.2em;
          @include font-size(12px);
          width: 60%;
          margin-left: 27%;

          @include media('>tablet') {
            @include font-size(18px);
            top: 70%;
          }
        }
      }
    }
  }

  ul.outcomes {
    border-radius: $base-border-radius;
    background-color: rgba($base, 0.2);
    border: 1px solid $base;
    padding: 1em 1em 1em 3em;
    position: relative;
    overflow: hidden;

    div.callout {
      background: $base;
      color: $white;
      font-size: 0.825em;
      font-weight: bold;
      position: absolute;
        top: -1px;
        left: 21px;
      text-indent: 10px;
      text-transform: uppercase;
      -webkit-transform-origin: 0 0;
      -moz-transform-origin:    0 0;
      -ms-transform-origin:     0 0;
      -o-transform-origin:      0 0;
      transform-origin:         0 0;
      -webkit-transform: rotate(90deg);
      -moz-transform:    rotate(90deg);
      -ms-transform:     rotate(90deg);
      -o-transform:      rotate(90deg);
      transform:         rotate(90deg);
      width: 100%;
      z-index: 1200;
    }
  }

  img#q_logo {
    float: right;
    width: 100px;
    max-width: 50%;
    margin-left: 1em;

    @include media('>tablet') {
      width: 200px;
    }
  }
}

body.music,
body.music-artists {
  header#masthead {
    // background-image: image-url("2733317546_2bd4d1237e_o.jpg");
    background-image: image-url("197090330_2c7b8a3fcb_o.jpg");

    h1,h2 { visibility: hidden; }
  }
}

